<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zest\'24</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Aries">Aries Merritt Merritt\'s road to athletics excellence began when he was spotted messing about with friends at school. The young athletes rise as a hurdler was rapid and saw him accept a place at the university of tennessee where he began breaking records. He ended the 2012 season as the olympic champion and world record-holder. Just a year after his olympic victory and world record run merritts life changed forever. The new season had been punctuated by a series of injuries and a lack of form that left merritt and his coaching team scratching their heads. When merritt went to seek medical help, the news he received from the doctors left him devastated. The cause of merritts kidney disease was a rare genetic disorder, found predominantly in african americans. Merritts sister stood by his side. She offered one of her own kidneys to keep her brother alive. Doctors eventually rectified the problems with the treatment and merritt gradually began to recover. His emotional but determined words left the whole world thrilled the past few years have been hard for me, but i hope to give inspiration to people who have had a life-threatening illness to not give up and still pursue their dreams.</string>
    <string name="Roger">Roger federers declaration that he is to retire from professional tennis brings to an end the career of arguably the most eminent tennis player of all. He left the sport with 20 grand slam titles, 103 titles in all, 310 weeks at the top of the world rankings, and the knowledge that he changed tennis. Federer found his first success at wimbledon as a junior player, winning both the boys singles and doubles titles. He vaulted into the top 15 with his first grand slam quarterfinal appearance. Federer is not only an exemplary shotmaker renowned for his forehand but was also praised for his composure and forthrightness. Becoming the first player in history to reach all four grand slam finals in back-to-back years, he is a portrait of the sport. For tennis, he had a style-defining effect and uniqueness in recreating it. Reaching the finals in a staggering 16 of the 17 tournaments in 2006 this season was the premier season of federer\'s career. Depiction of his career is incomplete without the well-known rivalry between him and rafael nadal. They all became better because of that daily pressure, and federer and nadal concluded long ago that they had more reach as a pair than on their own. After successive failures in brisbane international, his resurgence with major titles like the australian open and wimbledon titles was a real inspiration for the whole sports world. And he said of his failure, "this one is definitely huge because it\'s centre court at wimbledon". The coep zest\'23 team takes pride in applauding this epitome of absolute determination!!</string>
    <string name="Vignesh">Regarded as one of the finest wrestlers to arise from india, vinesh phogat has a strong wrestling heritage behind her. Inspired by wrestler father, she started to practise after being introduced to the sport at an early age. Her very struggle began with facing social barriers and setbacks. Along with her cousins, she was neither supported nor allowed to take part in the wrestling matches. At the age of just nine, she had to cope with the untimely death of her father. She came under conversation after making an international mark by winning bronze at the 2013 asian wrestling championship at the age of 19. She carried on her fine form at the 2015 asian championships in doha, where she clinched another silver medal. While her career seemed to be on a steep rise at this point, she suffered a huge setback in the following year at the 2016 paralympic games. Despite her knee injury she continued to work for her dream. She announced a strong comeback into wrestling, as she clinched a silver medal at the asian wrestling championship. Vinesh phogat was a medal favorite but nothing went right for the star indian wrestler at tokyo 2020. She lost the quarterfinal by fall to vanesa kaladzinskaya of belarus. Unfair criticism of her performance had led to her feeling distressed, leaving her wondering whether she should even return to the mat. But she was determined to compete once again. Vinesh went on to win many medals including recent gold at cwg 2022 in birmingham to become an outstanding wrestler! In word of confucius, "our greatest glory is not in never falling, but in rising every time we fall."</string>
    <string name="Matthias">Some sporting comebacks are exceptionally motivating and magnificent. This is one of them! ! Matthias steiner is a retired austrian-german weightlifter and olympic gold medallist with a peculiar and unique struggle in his career. It has been glorious and unbreakable in sporting parameters since he began his career. Due to a course infection, steiner suffered from diabetes at an early age, but he faced that challenge and overcame it firmly. For weightlifter matthias steiner, real glory came in beijing in 2008. The summit for any athlete in the world is the olympic games gold medal. And it was accomplished by matthias in a thrilling way!! Although it seems very smooth, it wasn\'t indeed. He won gold with a tempest clean and jerk of 258 kilograms in the 105+ kg category. The 105+ kg category is the heaviest at the games and the winner is considered to be the strongest man in the world. Prior to the 2008 olympic games, he swore to his wife susann that he would win a gold medal at the beijing olympics. Unfortunately, she passed away in a tragic car accident the summer before the games were set to begin. However, in what has been described as an "effusive final" at the 2008 olympics, the weightlifter experienced the greatest success of his career. He successfully became an olympic gold medallist in beijing. His story is now an inspiration to all, encouraging all to never give up and to keep moving forward.</string>
    <string name="Heading">The Zest\’24 app is developed by the web team of the COEP Technological University. ZEST\’24 is a Free app. This SERVICE is provided by COEP ZEST\’23 at no cost and is intended for use as it is. We respect the privacy rights of our users and are committed to protecting their personal information. This privacy policy outlines the types of information we collect, how it is used, and the steps we take to protect it.</string>
    <string name="Information">The Zest\'24 app requires internet connection and location permissions. No personal information is stored in our database. The app only fetches data from the Firebase database and displays it to users. The app does use third-party services that may collect information used to identify you.</string>
    <string name="LogData">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="Cache">This Service does use cache explicitly. Cache is primarily used to reduce the waiting time while fetching from the database. The app may use third-party code and libraries that use cache to improve their services. If the user does not want to store cache memory, he can clear it</string>
    <string name="ThirdParty">The Zest\’24 app may use third-party services to provide certain functionality. These third-party services may collect and store information about users However, they are obligated not to disclose or use the information for any other purpose. But it is subject to their own privacy policies, which we encourage users to review.</string>
    <string name="DataSecurity">We take all necessary measures to protect the security of user information. Access to the data is restricted to authorized personnel only. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="Links">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="Apache">The Zest 24 app uses Apache 2.0 dependency for its smooth navigation and UI purpose. Apache 2.0 is an open-source software license that allows users to freely use and distribute software. By using Apache 2.0 in our app, we aim to provide users with a reliable and secure navigation experience.</string>
    <string name="ChildrenPrivacy">These Services do not address anyone under the age of 18. I do not knowingly collect personally identifiable information from children under 18. In the case we discover that a child under 18 has provided me with personal information, we will immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.</string>
    <string name="Disclaimer">While we take all necessary precautions to protect user information, we cannot guarantee the complete security of the data. Users are advised to take steps to protect their own information and use the app at their own risk. This privacy policy applies only to the Zest 24 app and does not cover any other websites, apps, or services that may be linked to from the app. We encourage users to review the privacy policies of any third-party services they use</string>
    <string name="Changes">We may update this privacy policy from time to time to reflect changes in our practices or to comply with legal requirements. Users are encouraged to periodically review this policy for the latest information on our privacy practices. This policy is effective as of 2024-01-30</string>
    <string name="ContactUs">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at web.zest@coeptech.ac.in.</string>
</resources>